fix | arreglos menores en estilos, hice un poco mas pequeña la navbar y el footer, la barra de navegación ahora está siempre visible, hice mas pequeas las imagenes de productos, y puse la flechita para ir hacia arriba en páginas largas

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,9 @@
     --negro: #303030;
     --gris: #b6b6b6; 
 } 
+body{
+    display: contents;
+}
 
 h1{
     font-family: 'Raleway', sans-serif;
@@ -33,18 +36,19 @@ h3{
     animation-iteration-count: 1;
     text-align: center;
     align-items: center;
-
 }
 
 h4{
     font-family: "Raleway";
-    font-size: 25px;
     color: var(--negro);
     text-align: center;
     text-transform: uppercase; 
-    margin: 30px;
+
 }
 
+h6 {
+    font-size: .8rem;
+}
 
 .card-img{
     justify-content: center;
@@ -58,18 +62,26 @@ h4{
     height: 30vh;
 }
 
+.barra-navegacion{
+    position: fixed;
+    z-index: 1;
+    /* display: flex; */
+    padding:0%;
+}
+
 .navbar-body-background{
     background-color: white;
+    height: 50px;
 }
 
 .nav-blue-bar{
     background-color: var(--azul);
     width: 100%;
-    height: 85px;
+    height: 55px;
 }
 
 .navbar-img-icon{
-    width: 20px;
+    width: 15px;
 }
 
 .navbar-light .navbar-nav .nav-link{
@@ -77,18 +89,9 @@ h4{
     font-weight: 700;
     color: var(--negro);
     text-transform: uppercase;
-    text-align: center;
     padding: 0px;
+    font-size: .8em;
 }
-
-.navbar-nav{
-margin:0px;
-}
-
-.nav-item{
-    font-size: 1em;
-}
-
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link{
     color:var(--azul);
@@ -99,7 +102,6 @@ margin:0px;
     background-color: var(--azul);
 }
 
-
 a {
     color:  var(--negro);
     text-decoration: none;
@@ -109,6 +111,11 @@ a {
 a:hover{
     text-decoration: none;
     color:var(--gris);
+}
+
+li{
+    list-style: none;
+    font-size: 13px;
 }
 
 .container-bios{
@@ -154,6 +161,7 @@ a:hover{
 
 .row{
     margin: 0px;
+    justify-content: center;
 }
 
 .container-fullvw{
@@ -168,12 +176,19 @@ a:hover{
     height: 100px;
 }
 
+.card-img-top{
+    width: 80%;
+    margin: auto;
+}
+
+
 .footer-background-black{
     background-color: var(--negro);
     }
     
 .footer-link-txt{
     color:white;
+    font-size: 12px;
 }
 
 .footer-title-txt{
@@ -196,10 +211,12 @@ a:hover{
 .footer-link-copyright{
     color: var(--gris);
     margin-top: 15px;
+    background-color: rgba(0, 0, 0, 0.2);
+    font-size: 10px;
 }
 
 .footer-img-icon{
-    width: 20px;
+    width: 15px;
     padding: 2px;
     margin-right: 5px;
 }
@@ -222,9 +239,22 @@ a:hover{
     display: none;
 }
 
-li{
-    list-style: none;
-}
+#irArriba {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index:1;
+    border: none;
+    outline: none;
+    background-color: var(--azul);
+    color: white;
+    cursor: pointer;
+    opacity: 80%;
+    border-radius: 100%;
+    width: 35px;
+    font-size: 20px;
+  }
 
 @keyframes slideIn{
     from {
@@ -274,7 +304,6 @@ li{
 .header-img{
     height: 20vh;
 }
-
 }
 @media (max-width: 992px) {
 
